--- a/index.html
+++ b/index.html
@@ -130,13 +130,16 @@
       <input class="input" type="height" name="" id="" placeholder="Height/cm" >
       <input class="input" type="weigth" name="" id="" placeholder="Weight/kg" >
       <br>
-      
       <input class="input" type="age" name="" id="" placeholder="Age">
-      <input type="text" name="" id="" placeholder="sex">
-
+      <select class="sex" name="sex" id="">
+     <option  value="">sex</option>
+      </select>
+      <br>
+      <select class="factor" name="activity factor" id="">
+      <option value=""> Select an activity factor</option>
+      </select>
       <br>
       <br>
-
       <button class="bmibtn">Calculate</button>
 
     </div>
