--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
         <button  class="btn ">Join Now</button>
 </div>
-<div> <img  src="./images/run.jpg" alt=""></div>
+<div> <img  src="./images/run.png" alt=""></div>
 </section>
   <!-- training section optional -->   
 <div class="BMI" >
