destop 3rd final

--- a/index.html
+++ b/index.html
@@ -185,11 +185,12 @@
 </main>
 <footer>
  <section class="footer"> 
+    <div> 
  <h1>Fitness</h1>
  <p>We believe fitness should be accessible to <br> everyone, 
     everywhere, regardless of income or access to a gym. With <br>
     hundreds of professional workouts</p>
-    <div class="footerflex">
+   </div>
         <div class="footdivone"> 
         <h2>Get Started</h2>
         <ul>
@@ -208,10 +209,9 @@
                 <li>App Design</li>
             </ul>
         </div>
-    </div>
-    <div class="footerdiv"> </div>
-  <p class="footerpsg"> All right reserved @Fitness 2024 </p>
  </section>
+ <div class="footerdiv"> </div>
+  <p class="footerpsg"> All right reserved @Fitness 2024 </p>
 </footer>
 </body>
 </html>
