--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
         </div>
     </nav>
-    <section class="fitnessheader">
+    <div class="fitnessheader">
         <div>
             <h1>Get body in <br> <span class="casual"> shape</span>  & stay <br> healthy</h1>
             <p>A huge selection of health and fitness content, healthy recipes <br> and transformation stories to help you get fit and stay fit!</p>
@@ -42,7 +42,7 @@
             <div class="circle"></div>
         </div>
       
-       </section> 
+    </div> 
 </header> 
 <main> 
 <section class="habit">
