--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
         </div>
       
     </div> 
+   
+
+
+
 </header> 
 <main> 
 <section class="habit">
@@ -79,7 +83,7 @@
     <h1>Run an Extra <br> 
         Mile Easily</h1>
         <p>We believe fitness should be accessible to everyone, <br> everywhere, regardless of income or access to a gym. With <br> hundreds of professional workouts.</p>
-        <button  class="btn ">Join Now</button>
+        <button  class="joinbtn ">Join Now</button>
 </div>
 <div> <img  src="./images/run.png" alt=""></div>
 </section>
