--- a/index.html
+++ b/index.html
@@ -13,19 +13,23 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playwrite+AR:wght@100..400&display=swap" rel="stylesheet">
-
+<script src="https://kit.fontawesome.com/5176668165.js" crossorigin="anonymous"></script>
 </head>
 <body class="inter">
    <header>
     <nav> 
         <div class="nav">
             <h2>Fitness</h2>
+            <div class="icon">
+                <i class="fa-solid fa-bars"></i>
+            </div>
             <div class="info">
                 <a class="home" href="">Home</a>
                 <a href="">Service</a>
                 <a href="">Contact</a>
                 <a href="">About</a>
             </div>
+            
         </div>
     </nav>
     <div class="fitnessheader">
@@ -155,7 +159,7 @@
    <br> access to a gym </p>
 </div>
 <section class="teamcontainer"> 
-     <div class="team">
+     <div class="team one">
         <img src="./images/trainer1.png" alt="">
         <h5>Jerome Bell</h5>
         <p>Trainer</p>
@@ -170,7 +174,7 @@
         <h5>Darrell Steward</h5>
         <p>Trainer</p>
      </div> 
-     <div class="team">
+     <div class="team four">
         <img src="./images/trainer4.png" alt="">
         <h5>Dianne Russell</h5>
         <p>Trainer</p>
