unique section responsive

--- a/uniquesection/index.html
+++ b/uniquesection/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/mediaquery.css">
 </head>
 <body>
   <!-- unique section  -->
@@ -15,25 +16,25 @@
  </div>
 <section class="unique">
  <div class="youga-1">
-    <img src="./Canva/streangth.png" alt="">
+    <img src="./Canva/streangth-removebg-preview.png" alt="">
     <h3>Strength Training</h3>
     <p>Strength training focuses on building muscle and enhancing  physical strength  lifting weights or using resistance bands to challenge muscles.</p>
     <button>Learn More</button>
  </div>
  <div class="youga-2">
-    <img src="./Canva/youga.png" alt="">
+    <img src="./Canva/youga-removebg-preview.png" alt="">
     <h3>Basic Yoga</h3>
     <p>Basic yoga emphasizes fundamental poses and breathing techniques  to enhance flexibility, balance, and relaxation.</p>
     <button>Learn More</button>
  </div>
  <div class="youga-3">
-    <img src="./Canva/Bodybuilding.png" alt="">
+    <img src="./Canva/Bodybuilding-removebg-preview.png" alt="">
     <h3>Bodybuilding</h3>
     <p>Bodybuilding is a specialized form of strength training aimed   at maximizing muscle size and definition.  It involves  a combination of weightlifting. </p>
     <button>Learn More</button>
  </div>
  <div class="youga-4">
-    <img src="./Canva/weight loss.png" alt="">
+    <img src="./Canva/weight_loss-removebg-preview.png" alt="">
     <h3>Weight Loss</h3>
     <p>Weight loss involves reducing body fat through a combination of diet, exercise, and  lifestyle changes. It typically includes cardiovascular exercises.</p>
     <button>Learn More</button>
