--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fitness</title>
     <link rel="stylesheet" href="./style/style.css">
-
     <link rel="stylesheet" href="./style/meidaquery.css">
      
     <!-- fontstyle -->
@@ -191,9 +190,38 @@
         <p>Trainer</p>
      </div>   
 </section>
+<!-- unique section -->
+<div class="fitt">
+    <h1> The Best Program <br> We Offers For You </h1>
+    <p> we offer expert programs in strength training, basic yoga, <br> bodybuilding,and weight loss. Achieve your fitness goals <br>  with our tailored solutions and dedicated support.</p>
+ </div>
+<section class=" YOUGA ">
+ <div class="youga-1">
+    <img class="yougaimg" src="./Canva/streangth-removebg-preview.png" alt="">
+    <h3>Strength Training</h3>
+    <p class="yougapasg">Strength training focuses on building muscle and enhancing  physical strength  lifting weights or using resistance bands to challenge muscles.</p>
+    <button class="yougabutn one ">Learn More</button>
+ </div>
+ <div class="youga-2">
+    <img  class="yougaimg" src="./Canva/youga-removebg-preview.png" alt="">
+    <h3>Basic Yoga</h3>
+    <p class="yougapasg">Basic yoga emphasizes fundamental poses and breathing techniques  to enhance flexibility, balance, and relaxation.</p>
+    <button class="yougabutn two" >Learn More</button>
+ </div>
+ <div class="youga-3">
+    <img class="yougaimg"  src="./Canva/Bodybuilding-removebg-preview.png" alt="">
+    <h3>Bodybuilding</h3>
+    <p class="yougapasg">Bodybuilding is a specialized form of strength training aimed   at maximizing muscle size and definition.  It involves  a combination of weightlifting. </p>
+    <button class="yougabutn three">Learn More</button>
+ </div>
+ <div class="youga-4">
+    <img class="yougaimg"  src="./Canva/weight_loss-removebg-preview.png" alt="">
+    <h3>Weight Loss</h3>
+    <p class="yougapasg">Weight loss involves reducing body fat through a combination of diet, exercise, and  lifestyle changes. It typically includes cardiovascular exercises.</p>
+    <button class="yougabutn four" >Learn More</button>
+ </div>
+</section> 
 </main>
-
-  
 <footer>
  <section class="footer"> 
     <div> 
@@ -224,6 +252,7 @@
  <div class="footerdiv"> </div>
   <p class="footerpsg"> All right reserved @Fitness 2024 </p>
 </footer>
+<!-- unique section  -->
 
 </body>
 </html>
