--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playwrite+AR:wght@100..400&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/5176668165.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/5176668165.js" crossorigin="anonymous"></script>
 </head>
 <body class="inter">
    <header>
@@ -45,13 +46,9 @@
             <button class="videobtn"><span>350+</span><br> video tutorial</button>
             <button class="bigvideobtn"> <span>500+ </span><br> Free Workout Videos</button>
             <div class="circle"></div>
+            <div class="plaicon"><i class="fa-solid fa-play"></i> </div>
         </div>
-      
     </div> 
-   
-
-
-
 </header> 
 <main> 
 <section class="habit">
@@ -252,7 +249,6 @@
  <div class="footerdiv"> </div>
   <p class="footerpsg"> All right reserved @Fitness 2024 </p>
 </footer>
-<!-- unique section  -->
 
 </body>
 </html>
