--- a/index.html
+++ b/index.html
@@ -197,25 +197,25 @@
     <img class="yougaimg" src="./Canva/streangth-removebg-preview.png" alt="">
     <h3>Strength Training</h3>
     <p class="yougapasg">Strength training focuses on building muscle and enhancing  physical strength  lifting weights or using resistance bands to challenge muscles.</p>
-    <button class="yougabutn one ">Learn More</button>
+    <button class="yougabutn onee ">Learn More</button>
  </div>
  <div class="youga-2">
     <img  class="yougaimg" src="./Canva/youga-removebg-preview.png" alt="">
     <h3>Basic Yoga</h3>
     <p class="yougapasg">Basic yoga emphasizes fundamental poses and breathing techniques  to enhance flexibility, balance, and relaxation.</p>
-    <button class="yougabutn two" >Learn More</button>
+    <button class="yougabutn twoo" >Learn More</button>
  </div>
  <div class="youga-3">
     <img class="yougaimg"  src="./Canva/Bodybuilding-removebg-preview.png" alt="">
     <h3>Bodybuilding</h3>
     <p class="yougapasg">Bodybuilding is a specialized form of strength training aimed   at maximizing muscle size and definition.  It involves  a combination of weightlifting. </p>
-    <button class="yougabutn three">Learn More</button>
+    <button class="yougabutn thrree">Learn More</button>
  </div>
  <div class="youga-4">
     <img class="yougaimg"  src="./Canva/weight_loss-removebg-preview.png" alt="">
     <h3>Weight Loss</h3>
     <p class="yougapasg">Weight loss involves reducing body fat through a combination of diet, exercise, and  lifestyle changes. It typically includes cardiovascular exercises.</p>
-    <button class="yougabutn four" >Learn More</button>
+    <button class="yougabutn fourr" >Learn More</button>
  </div>
 </section> 
 </main>
